k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: notes-api-service
  namespace: notes-api
spec:
  type: ClusterIP
  selector:
    app: notes-api
  ports:
    - port: 3000
      targetPort: 3000
